--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-keras==2.15.0
-numpy==1.26.4
-pandas==2.2.1
-streamlit==1.29.0
-tensorflow==2.15.0
+keras==2.10.0
+nltk==3.8.1
+numpy==2.0.0
+pandas==2.2.2
+streamlit==1.35.0
+tensorflow==2.10.0
